syntax = "proto3";
import "google/protobuf/descriptor.proto";
import "google/protobuf/any.proto";

message XmlOptions{
    optional string name = 1;
    optional string description = 2;
}

extend google.protobuf.MessageOptions{
    optional XmlOptions xml_message_options = 55000;
}

extend google.protobuf.FieldOptions{
    optional XmlOptions xml_field_options = 55001;
}

extend google.protobuf.EnumOptions{
    optional XmlOptions xml_enum_options = 55002;
}

extend google.protobuf.EnumValueOptions{
    optional XmlOptions xml_enum_value_options = 55003;
}
package ops.sap;

enum ResultInt{
    option (xml_enum_options) = {name: "RESULT_INT"};
    OK = 0 [(xml_enum_value_options)={description: "Success"}];
    UNKNOWN = 99;
}
message DataType{
    string type = 1;
}
message Result
{
    message Results{
        message Value{
            string name = 1;
            string value = 2;
        }
        repeated Value values = 1;
    }
    optional Results results = 1;
    optional DataType data_type = 2;
    optional google.protobuf.Any data = 3;
}